2009-12-15  vadim  <vadim@vk.crocodile.org>

	* objects_init.xml: Standard objects library now comes with new
	IPv6 Network objects. These objects represent IPv6 networks that
	should not be routed on the Internet. Included: RFC3849
	"Documentation Network" 2001:db8::; RFC4291 "Link local"
	fe80::/10; RFC4773 "Experimental Network" 2001:0000::/29 to
	2001:01F8::/29. Also added a group "ipv6 private" that includes
	all these networks. Fixes #888

	* instDialog.cpp (instDialog::instDialog): Moved "batch install"
	checkbox to the page that shows compiler progress so the user can
	decide to do batch install right before they perform installations
	instead of doing this before they start compile.

2009-12-14  vadim  <vadim@vk.crocodile.org>

	* src/res/configlets/linux24/automatic_rules: Generation of the
	automatic rules (matching ESTABLISHED and INVALID states,
	backup ssh access and others) now uses configlet. Fixes #883

	* src/res/configlets/linux24/automatic_rules: generated script can
	now include automatic rules to match IPv6 neighbor discovery ICMP6
	packets. This is controlled by a checkbox in the iptables
	"advanced" settings dialog and is off by default. Fixes #878

	* PrefsDialog.cpp (PrefsDialog::accept): Added a place in the
	global Preferences dialog for options specific for different
	object types. First parameters include options for DNSName and
	AddressTable to let the user decide if the newly created objects
	of these types should be automatically configured with "Compile
	Time" or "Run Time" mode. Also, added an option that makes DNSName
	object editor copy the name of the object into the DNS record
	input field when new object is created or whenever the name
	changes.  This is useful when the user does not want to keep
	object name and dns record different because they need to enter
	the name only once.

	* DNSNameDialog.cpp (DNSNameDialog::applyChanges): If global
	Preferences option "Use DNS Name object name for the DNS record"