@@ -114,10 +114,12 @@ sh %FWDIR%/tmp/%FWSCRIPT% &#38;&#38; echo 'Policy activated'
         <pfsync>
           <needs_master>False</needs_master>
           <manage_addresses>True</manage_addresses>
+          <dialog>pfsync</dialog>
         </pfsync>
         <carp>
           <needs_master>True</needs_master>
           <manage_addresses>True</manage_addresses>
+          <dialog>carp</dialog>
         </carp>
       </protocols>
 
