@@ -127,6 +127,7 @@ sh %FWDIR%/tmp/%FWSCRIPT% &#38;&#38; echo 'Policy activated'
           <default_address>224.0.10.100</default_address>
           <default_port>694</default_port>
           <manage_addresses>False</manage_addresses>
+          <dialog>heartbeat</dialog>
         </heartbeat>
 
         <openais>
@@ -135,18 +136,21 @@ sh %FWDIR%/tmp/%FWSCRIPT% &#38;&#38; echo 'Policy activated'
           <default_address>226.94.1.1</default_address>
           <default_port>5405</default_port>
           <manage_addresses>False</manage_addresses>
+          <dialog>openais</dialog>
         </openais>
 
         <conntrack>
           <needs_master>False</needs_master>
           <default_address>225.0.0.50</default_address>
           <default_port>3780</default_port>
+          <dialog>conntrack</dialog>
         </conntrack>
 
         <vrrp>
           <needs_master>True</needs_master>
           <no_ip_ok>False</no_ip_ok>
           <manage_addresses>True</manage_addresses>
+          <dialog></dialog>
         </vrrp>
       </protocols>
 
